--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -46,13 +46,13 @@
   --text-color: #272822;
   --header-color: #5D7E6A;
   --background-color: #FFFFFF;
-  --link-color: #8D5B99;
+  --link-color: #F28B25;
   --text-bold-color: #5D7E6A;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #ECF5E2;
   --inverse-background-color: #5D7E6A;
   --inverse-header-color: #ECF5E2;
-  --inverse-link-color: #8D5B99;
+  --inverse-link-color: #F28B25;
   --title-slide-background-color: #5D7E6A;
   --title-slide-text-color: #ECF5E2;
   --header-background-color: #5D7E6A;
